--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==4.3.0
 docutils==0.14
 Faker==0.9.1
 flake8==3.6.0
+Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
