installed python packages that were missing and added to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,30 @@
-appnope==0.1.0
-awscli==1.16.101
-backcall==0.1.0
-bcrypt==3.1.4
-blinker==1.4
-botocore==1.12.91
+beautifulsoup4==4.7.1
 certifi==2018.11.29
-cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-colorama==0.3.9
-decorator==4.3.0
-docutils==0.14
-Faker==0.9.1
-flake8==3.6.0
+cssselect==1.0.3
+feedfinder2==0.0.4
+feedparser==5.2.1
 Flask==1.0.2
-Flask-Bcrypt==0.7.1
-Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-gunicorn==19.9.0
-idna==2.7
-ipython==7.0.1
-ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.13.1
+Flask-Cors==3.0.7
+idna==2.8
+itsdangerous==1.1.0
+jieba3k==0.35.1
 Jinja2==2.10
-jmespath==0.9.3
-MarkupSafe==1.0
-mccabe==0.6.1
-nh-currency==1.0.1
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.5
-prompt-toolkit==2.0.5
-psycopg2-binary==2.7.5
-ptyprocess==0.6.0
-pyasn1==0.4.5
-pycodestyle==2.4.0
-pycparser==2.19
-pyflakes==2.0.0
-Pygments==2.2.0
-python-dateutil==2.7.3
+lxml==4.3.2
+MarkupSafe==1.1.0
+newspaper3k==0.2.8
+nltk==3.4
+Pillow==5.4.1
+python-dateutil==2.8.0
 PyYAML==3.13
-requests==2.20.1
-rsa==3.4.2
-s3transfer==0.2.0
-simplegeneric==0.8.1
-six==1.11.0
-SQLAlchemy==1.2.12
-text-unidecode==1.2
-traitlets==4.3.2
+readability==0.3
+requests==2.21.0
+requests-file==1.4.3
+singledispatch==3.4.0.3
+six==1.12.0
+soupsieve==1.8
+tinysegmenter==0.3
+tldextract==2.2.1
 urllib3==1.24.1
-wcwidth==0.1.7
 Werkzeug==0.14.1
-WTForms==2.2.1
-yapf==0.24.0
